--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@next-auth/prisma-adapter": "1.0.7",
     "@parcel/css": "^1.14.0",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -55,6 +54,7 @@
     "@tiptap/react": "^3.10.4",
     "@tiptap/starter-kit": "^3.10.4",
     "aws-sdk": "^2.1692.0",
+    "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -64,7 +64,6 @@
     "lightningcss": "^1.30.2",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
-    "next-auth": "4.24.11",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
