--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "jose": "^6.1.2",
+    "jsonwebtoken": "^9.0.2",
     "lightningcss": "^1.30.2",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
@@ -84,6 +86,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.3",
     "@types/pg": "^8.15.6",
